[package]
name = "chess"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
eventsource-stream = "0.1.1"
futures = "0.3.17"
reqwest = { version = "0.10.6", features = ["stream"] }

[dependencies.tokio]
version = "0.2.0"
features = ["full"]
