[package]
name = "zchess"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "zch"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
futures = "0.3.17"
toml = "0.5.8"
serde_json = "1.0.68"

[dependencies.tokio]
version = "1.12.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.5"
features = ["stream"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
